First version poc 0.0.1